<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_news"
        android:name="at.fh.swengb.beFast.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_brands"
        android:name="at.fh.swengb.beFast.ui.brands.BrandsFragment"
        android:label="@string/title_brands"
        tools:layout="@layout/fragment_brands" />

    <fragment
        android:id="@+id/navigation_drops"
        android:name="at.fh.swengb.beFast.ui.drops.DropsFragment"
        android:label="@string/title_drops"
        tools:layout="@layout/fragment_drops" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="at.fh.swengb.beFast.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>