<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".drops.recyclerview.DescriptionActivity">

        <TextView
            android:id="@+id/description_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/description_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.894"
            app:layout_constraintStart_toEndOf="@+id/description_brand"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.116" />

        <TextView
            android:id="@+id/description_brand"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/description_brand"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/description_brand"
            app:layout_constraintTop_toBottomOf="@+id/description_brand" />

        <ImageView
            android:id="@+id/description_imageView"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="112dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/description_description"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="308dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/description_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_drop"
            app:icon="@drawable/ic_baseline_share_24"
            app:iconGravity="end"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="566dp" />

        <Button
            android:id="@+id/description_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            app:icon="@drawable/ic_baseline_calendar_today_24"
            app:iconGravity="end"


            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="454dp" />

        <Button
            android:id="@+id/description_stockX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="stockX"
            app:icon="@drawable/ic_baseline_attach_money_24"
            app:iconGravity="end"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="686dp" />

        <Button
            android:id="@+id/description_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Personal Note"
            app:icon="@drawable/ic_baseline_notes_24"
            app:iconGravity="end"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="659dp" />

        <Button
            android:id="@+id/description_homepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homepage"
            app:icon="@drawable/ic_baseline_open_in_browser_24"
            app:iconGravity="end"
            tools:layout_editor_absoluteX="122dp"
            tools:layout_editor_absoluteY="510dp" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="413dp"
            android:layout_height="221dp"
            android:layout_marginTop="24dp"
            app:constraint_referenced_ids="description_reminder,description_homepage,description_note,description_share,description_stockX"
            app:flow_firstVerticalStyle="spread_inside"
            app:flow_horizontalGap="20dp"
            app:flow_maxElementsWrap="1"
            app:flow_verticalAlign="baseline"
            app:flow_verticalGap="5dp"
            app:flow_verticalStyle="packed"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>